--- a/src/main/resources/workload-simulation-ui-src/src/app/components/fixed-target-workload/fixed-target-workload.component.html
+++ b/src/main/resources/workload-simulation-ui-src/src/app/components/fixed-target-workload/fixed-target-workload.component.html
@@ -12,12 +12,12 @@
 </div>
 <div style="font-size: 24pt; text-align: center; color: black; background-color: white; padding: 0.2em;">
     <div class="grid">
-      <span class="col">Transactions/sec: {{(getLatestData().throughput) | number:'1.0-1'}}</span>
-      <span class="col">Avg Latency: {{(getLatestData().avgLatency / 1000) | number:'1.0-1'}}ms</span>
-        <span class="col">Completed: {{(getLatestData().percentageComplete/100) | percent:'1.0-1'}}</span>
-        <span class="col">Time Remaining: {{(getLatestData().timeRemainingInMs / 1000) | number:'1.0-0'}}s</span>
+      <span class="col">トランザクション数/秒: {{(getLatestData().throughput) | number:'1.0-1'}}</span>
+      <span class="col">平均レイテンシー: {{(getLatestData().avgLatency / 1000) | number:'1.0-1'}}ms</span>
+        <span class="col">完了: {{(getLatestData().percentageComplete/100) | percent:'1.0-1'}}</span>
+        <span class="col">残り時間: {{(getLatestData().timeRemainingInMs / 1000) | number:'1.0-0'}}s</span>
     </div>
     <div style="font-size: 16pt; padding-top: 1.5rem;">
-      Transactions Completed: {{getLatestData().completed | number:'1.0':'en-US'}} / {{getLatestData().target | number:'1.0':'en-US'}}
+      トランザクション完了数: {{getLatestData().completed | number:'1.0':'en-US'}} / {{getLatestData().target | number:'1.0':'en-US'}}
     </div>
 </div>
