--- a/src/main/resources/workload-simulation-ui-src/src/app/components/network-diagram/network-diagram.component.html
+++ b/src/main/resources/workload-simulation-ui-src/src/app/components/network-diagram/network-diagram.component.html
@@ -4,18 +4,18 @@
     <figure #network id="network" style="height: 100%; width: 100%"></figure>
     <div class="status grid" style="margin: 0;" *ngIf="yugabyteOffering == 'Yugabyte Managed'">
         <div class="col-4 d-inline-block pt-0">
-            <p-button label="Scale Cluster" icon="fa-solid fa-up-down" badge="{{nodeCount}}" 
-            class="p-button-sm p-button-secondary" styleClass="p-button-secondary" [style]="{'width' : '100%'}" 
+            <p-button label="Scale Cluster" icon="fa-solid fa-up-down" badge="{{nodeCount}}"
+            class="p-button-sm p-button-secondary" styleClass="p-button-secondary" [style]="{'width' : '100%'}"
             badgeClass="p-button-secondary" (onClick)="scaleCluster()"></p-button>
         </div>
         <div class="col-4 d-inline-block pt-0">
-            <p-button label="Stop Selected Nodes" icon="fa-solid fa-stop" badge="{{selectedItems.length}}" 
-            [disabled]="selectedItems.length == 0" class="p-button-sm p-button-secondary" styleClass="p-button-secondary" [style]="{'width' : '100%'}" 
+            <p-button label="Stop Selected Nodes" icon="fa-solid fa-stop" badge="{{selectedItems.length}}"
+            [disabled]="selectedItems.length == 0" class="p-button-sm p-button-secondary" styleClass="p-button-secondary" [style]="{'width' : '100%'}"
             badgeClass="p-button-secondary" (onClick)="confirmStopNodes()"></p-button>
         </div>
         <div class="col-4 d-inline-block pt-0">
-            <p-button label="Restart Missing Nodes" icon="fa-solid fa-play" badge="{{missingNodes.length}}" 
-            [disabled]="missingNodes.length == 0" class="p-button-sm p-button-secondary" styleClass="p-button-secondary" [style]="{'width' : '100%'}" 
+            <p-button label="Restart Missing Nodes" icon="fa-solid fa-play" badge="{{missingNodes.length}}"
+            [disabled]="missingNodes.length == 0" class="p-button-sm p-button-secondary" styleClass="p-button-secondary" [style]="{'width' : '100%'}"
             badgeClass="p-button-secondary" (onClick)="confirmRestartNodes()"></p-button>
         </div>
     </div>
@@ -34,7 +34,7 @@
     <ng-template pTemplate="footer">
         <p-button *ngIf="!showCloseIcon" icon="pi pi-check" (onClick)="applyScaleClusterDialog()" label="Ok"></p-button>
         <p-button *ngIf="!showCloseIcon" icon="pi pi-times" (onClick)="closeScaleClusterDialog()" label="Cancel"></p-button>
-        <p-button *ngIf="showCloseIcon" icon="pi pi-check" (onClick)="closeScaleClusterDialog()" label="Close"></p-button>
+        <p-button *ngIf="showCloseIcon" icon="pi pi-check" (onClick)="closeScaleClusterDialog()" label="閉じる"></p-button>
     </ng-template>
-    
+
 </p-dialog>
