--- a/src/main/resources/workload-simulation-ui-src/src/app/components/app-simulation/app-simulation.component.html
+++ b/src/main/resources/workload-simulation-ui-src/src/app/components/app-simulation/app-simulation.component.html
@@ -248,14 +248,14 @@
                         </th>
                         <th pSortableColumn="status">
                             <div class="flex justify-content-between align-items-center">
-                                Status
+                                状態
                                 <p-sortIcon field="status"></p-sortIcon>
                                 <p-columnFilter type="text" field="status" display="menu" class="ml-auto"></p-columnFilter>
                             </div>
                         </th>
                         <th pSortableColumn="startTime">
                             <div class="flex justify-content-between align-items-center">
-                                Start Time
+                                開始時刻
                                 <p-sortIcon field="startTime"></p-sortIcon>
                                 <p-columnFilter type="text" field="startTime" display="menu" class="ml-auto"></p-columnFilter>
                             </div>
