--- a/src/main/resources/workload-simulation-ui-src/src/styles.css
+++ b/src/main/resources/workload-simulation-ui-src/src/styles.css
@@ -132,7 +132,7 @@ figure {
 }
 
 .p-panel .p-panel-content {
-  background-color: floralwhite !important;
+  background-color: white !important;
 }
 
 .server {
